[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/card/A1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Card.gd" type="Script" id=2]
[ext_resource path="res://assets/card/signal.jpg" type="Texture" id=3]

[node name="Card" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="SignalTop" type="Sprite" parent="."]
position = Vector2( 0, -90.5841 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="SignalMid" type="Sprite" parent="."]
position = Vector2( 3.05176e-05, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="SignalBottom" type="Sprite" parent="."]
position = Vector2( 0, 91.1138 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
